--- a/custom_components/octopus_french/translations/fr.json
+++ b/custom_components/octopus_french/translations/fr.json
@@ -3,7 +3,7 @@
     "step": {
       "user": {
         "title": "Configurer Octopus Energy France",
-        "description": "Entrez vos identifiants de compte Octopus Energy",
+        "description": "Entrez vos identifiants de compte Octopus Energy France",
         "data": {
           "email": "Email",
           "password": "Mot de passe"
@@ -24,18 +24,14 @@
     "step": {
       "init": {
         "title": "Options pour Octopus Energy France",
-        "description": "Configurer l'intervalle de mise à jour et la collecte de données",
-        "data": {
-          "scan_interval": "Intervalle de mise à jour (minutes)",
-          "fetch_history": "Récupérer l'historique de consommation"
-        }
+        "description": "Configurer l'intervalle de mise à jour"
       }
     }
   },
   "entity": {
     "sensor": {
       "conso_base": {
-        "name": "HP / mois en cours",
+        "name": "Conso / mois en cours",
         "state_attributes": {
           "current_month": {
             "name": "Mois en cours"
@@ -214,7 +210,7 @@
           }
         }
       },
-      "contrat": {
+      "contract": {
         "name": "Contrat",
         "state_attributes": {
           "ledger_id": {
